@@ -5,6 +5,7 @@ use English;
 use Error::Pure::Utils qw(clean);
 use Test::More 'tests' => 8;
 use Test::NoWarnings;
+use Wikibase::Cache;
 use Wikibase::Cache::Backend::Basic;
 use Wikibase::Datatype::Value::Quantity;
 use Wikibase::Datatype::Print::Value::Quantity;
@@ -45,7 +46,9 @@ $obj = Wikibase::Datatype::Value::Quantity->new(
 	'unit' => 'Q174728',
 	'value' => 10,
 );
-my $cache = Wikibase::Cache::Backend::Basic->new;
+my $cache = Wikibase::Cache->new(
+	'backend' => 'Basic',
+);
 $ret = Wikibase::Datatype::Print::Value::Quantity::print($obj, {
 	'cb' => $cache,
 	'print_name' => 1,
@@ -57,7 +60,9 @@ $obj = Wikibase::Datatype::Value::Quantity->new(
 	'unit' => 'Q335320',
 	'value' => 10,
 );
-$cache = Wikibase::Cache::Backend::Basic->new;
+$cache = Wikibase::Cache->new(
+	'backend' => 'Basic',
+);
 $ret = Wikibase::Datatype::Print::Value::Quantity::print($obj, {
 	'cb' => $cache,
 	'print_name' => 1,
@@ -74,6 +79,6 @@ eval {
 		'cb' => 'bad_callback',
 	});
 };
-is($EVAL_ERROR, "Option 'cb' must be a instance of Wikibase::Cache::Backend.\n",
-	"Option 'cb' must be a instance of Wikibase::Cache::Backend.");
+is($EVAL_ERROR, "Option 'cb' must be a instance of Wikibase::Cache.\n",
+	"Option 'cb' must be a instance of Wikibase::Cache.");
 clean();
