@@ -5,6 +5,7 @@ use English;
 use Error::Pure::Utils qw(clean);
 use Test::More 'tests' => 6;
 use Test::NoWarnings;
+use Wikibase::Cache;
 use Wikibase::Cache::Backend::Basic;
 use Wikibase::Datatype::Value::Time;
 use Wikibase::Datatype::Print::Value::Time;
@@ -35,7 +36,9 @@ is($ret, '01 September 2020 (Q1985727)', 'Get printed value. Only QID.');
 $obj = Wikibase::Datatype::Value::Time->new(
 	'value' => '+2020-09-01T00:00:00Z',
 );
-my $cache = Wikibase::Cache::Backend::Basic->new;
+my $cache = Wikibase::Cache->new(
+	'backend' => 'Basic',
+);
 $ret = Wikibase::Datatype::Print::Value::Time::print($obj, {
 	'cb' => $cache,
 	'print_name' => 1,
@@ -51,6 +54,6 @@ eval {
 		'cb' => 'bad_callback',
 	});
 };
-is($EVAL_ERROR, "Option 'cb' must be a instance of Wikibase::Cache::Backend.\n",
-	"Option 'cb' must be a instance of Wikibase::Cache::Backend.");
+is($EVAL_ERROR, "Option 'cb' must be a instance of Wikibase::Cache.\n",
+	"Option 'cb' must be a instance of Wikibase::Cache.");
 clean();
